Fix `content.css`, Move PDF, & update news widget & post heading HTML.

--- a/_includes/latest-news-widget.html
+++ b/_includes/latest-news-widget.html
@@ -20,7 +20,7 @@
                       </div>
                       <img id="playIcon{{ forloop.index }}" src="{{ page.baseurl }}assets/img/play.svg" alt="" class="latest-news-widget__play-icon js-play-icon">
                       <div id="jsImageMod{{ forloop.index }}" class="latest-news-widget__feature__img-mod js-hp-feature--img-mod latest-news-widget__feature__yt-thumb" style="background-image: url('https://img.youtube.com/vi/{{  post.video_link | remove: "https://youtu.be/" }}/hqdefault.jpg')">
-                        <img id="latestNewsImage{{ forloop.index }}" class="latest-news-widget__feature__img js-latest-news-widget-img" src="https://img.youtube.com/vi/{{  post.video_link | remove: "https://youtu.be/" }}/hqdefault.jpg" alt="{{ post.news_image_alt }}">
+                        <img id="latestNewsImage{{ forloop.index }}" class="latest-news-widget__feature__img js-latest-news-widget-img" src="https://img.youtube.com/vi/{{  post.video_link | remove: "https://youtu.be/" }}/hqdefault.jpg" alt="{{ post.news_image_alt | replace: '"', '&quot;' }}">
                       </div>
                     </a>
                   {% else %}
@@ -30,7 +30,7 @@
                         <h3 class="latest-news-widget__feature__tease__h"><span class="latest-news-widget__hspan--word-break js-hp-feature-tease-link">{{ post.article_lead }}</span></h3>
                       </div>
                       <div id="jsImageMod{{ forloop.index }}" class="latest-news-widget__feature__img-mod js-hp-feature--img-mod" style="background-image: url('{{ post.image }}')">
-                        <img id="latestNewsImage{{ forloop.index }}" class="latest-news-widget__feature__img js-latest-news-widget-img" src="{% unless post.image contains 'https://' %}{{ page.baseurl }}{% endunless %}{{ post.image }}" alt="{{ post.news_image_alt }}">
+                        <img id="latestNewsImage{{ forloop.index }}" class="latest-news-widget__feature__img js-latest-news-widget-img" src="{% unless post.image contains 'https://' %}{{ page.baseurl }}{% endunless %}{{ post.image }}" alt="{{ post.news_image_alt | replace: '"', '&quot;' }}">
                       </div>
                     </a>
                   {% endif %}
@@ -43,7 +43,7 @@
                       </div>
                       <img id="playIcon{{ forloop.index }}" src="{{ page.baseurl }}assets/img/play.svg" alt="" class="latest-news-widget__play-icon js-play-icon">
                       <div id="jsImageMod{{ forloop.index }}" class="latest-news-widget__feature__img-mod js-hp-feature--img-mod latest-news-widget__feature__yt-thumb">
-                        <img id="latestNewsImage{{ forloop.index }}" class="latest-news-widget__feature__img js-latest-news-widget-img" src="https://img.youtube.com/vi/{{  post.video_link | remove: "https://youtu.be/" }}/hqdefault.jpg" alt="{{ post.news_image_alt }}">
+                        <img id="latestNewsImage{{ forloop.index }}" class="latest-news-widget__feature__img js-latest-news-widget-img" src="https://img.youtube.com/vi/{{  post.video_link | remove: "https://youtu.be/" }}/hqdefault.jpg" alt="{{ post.news_image_alt | replace: '"', '&quot;' }}">
                       </div>
                     </a>
                   {% else %}
@@ -53,7 +53,7 @@
                         <h3 class="latest-news-widget__feature__tease__h"><span class="latest-news-widget__hspan--word-break js-hp-feature-tease-link">{{ post.article_lead }}</span></h3>
                       </div>
                       <div id="jsImageMod{{ forloop.index }}" class="latest-news-widget__feature__img-mod js-hp-feature--img-mod">
-                        <img id="latestNewsImage{{ forloop.index }}" class="latest-news-widget__feature__img js-latest-news-widget-img" src="{% unless post.image contains 'https://' %}{{ page.baseurl }}{% endunless %}{{ post.image }}" alt="{{ post.news_image_alt }}">
+                        <img id="latestNewsImage{{ forloop.index }}" class="latest-news-widget__feature__img js-latest-news-widget-img" src="{% unless post.image contains 'https://' %}{{ page.baseurl }}{% endunless %}{{ post.image }}" alt="{{ post.news_image_alt | replace: '"', '&quot;' }}">
                       </div>
                     </a>
                   {% endif %}
