--- a/_includes/latest-news-modal.html
+++ b/_includes/latest-news-modal.html
@@ -11,6 +11,7 @@
             <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
               <div class="modal-content">
                 <div class="modal-header">
+                  <h4 id="title{{ forloop.index }}" class="modal-title typography__h4">{{ post.title }}</h4>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
@@ -19,7 +20,6 @@
                   <div class="positioning__iframe-wrapper">
                     <iframe class="js-yt-frame" id="iframe{{ forloop.index }}" data-theVideo="https://www.youtube.com/embed/{{ post.video_link | remove: "https://youtu.be/" }}" width="720" height="405" src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                   </div><br>
-                  <h4 id="title{{ forloop.index }}" class="news__heading">{{ post.title }}</h4>
                   <h5 class="news__sub-heading news__sub-heading--spacing"> <span class="news__date">Posted On: {{ post.date | date: "%m/%d/%y" }} </span></h5>
                   <div class="post__content">
                     {{ post.content }}
@@ -40,12 +40,12 @@
             <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
               <div class="modal-content">
                 <div class="modal-header">
+                  <h4 id="title{{ forloop.index }}" class="modal-title typography__h4">{{ post.title }}</h4>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
                 </div>
                 <div class="modal-body">
-                  <h4 id="title{{ forloop.index }}" class="news__heading">{{ post.title }}</h4>
                   <h5 class="news__sub-heading news__sub-heading--spacing"> <span class="news__date">Posted On: {{ post.date | date: "%m/%d/%y" }} </span></h5>
                 <div class="post__content">
                   {{ post.content }}
