--- a/assets/scss/1-base/_typography.scss
+++ b/assets/scss/1-base/_typography.scss
@@ -291,3 +291,38 @@ p.general-p {
 .typography__newsroom-heading {
   font-family: $secondaryfont-weight-bold;
 }
+
+h2.typography__h2 {
+  color: #666;
+  font-family: 'Roboto', sans-serif;
+  font-size: 2rem;
+  font-weight: 500;
+}
+
+h3.typography__h3 {
+  color: #0f3b63;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.75rem;
+  font-weight: 600;
+}
+
+h4.typography__h4 {
+  color: #c61f48;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.7rem;
+  font-weight: 600;
+}
+
+h5.typography__h5 {
+  color: #666;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  font-size: 1.5rem;
+}
+
+h6.typography__h6 {
+  color: #666;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  font-size: 1.4rem;
+}
