--- a/_includes/body.html
+++ b/_includes/body.html
@@ -1,8 +1,7 @@
   <!-- Custom CSS Stylesheet for CloudCannon -->
   <link rel="stylesheet" href="{{page.baseurl}}assets/css/content.css">
-  <!-- Uncomment to prevent IE-11 caching (for IE testing) -->
-  <!-- <META HTTP-EQUIV="Pragma" CONTENT="no-cache">
-  <META HTTP-EQUIV="Expires" CONTENT="-1"> -->
+  <!-- Clarus corp. script -->
+  <script async referrerpolicy="no-referrer-when-downgrade" src="https://tag.simpli.fi/sifitag/6089e310-26f9-0136-e8b0-06659b33d47c"></script>
 </head>
 <body>
 {% if page.title == "Newsroom" or page.layout == "post" %}
