Update theme, add ICC logo, replace old twitter logo.

--- a/_includes/social-icons.html
+++ b/_includes/social-icons.html
@@ -6,7 +6,7 @@
   </span>
   <span>
     <a href="http://twitter.com/KCCedu" class="social-icons__links" target="_blank" rel="noopener">
-      <img src="{{page.baseurl}}assets/img/twitter-white.svg" class="social-icons__icons" alt="Twitter icon, link to KCC Twitter page">
+      <img src="{{page.baseurl}}assets/img/x-logo.svg" class="social-icons__icons" alt="Twitter icon, link to KCC Twitter page">
     </a>
   </span>
   <span>
