Upgrade to BS5, cleanup project, convert $ to vanilla...
* Upgrade project to Bootstrap 5 and new gem theme.
* Cleanup unused JS and CSS.
* Switch static JS imports to dynamic imports.
* Convert jQuery vanilla JS:
  * [TODO]: Convert `assets/js/src/newsWidget.js` to
    vanilla JS.

--- a/_includes/body.html
+++ b/_includes/body.html
@@ -6,4 +6,4 @@
   {% include scripts/twitter-script.html %}
   {% include scripts/facebook-sdk.html %}
 {% endif %}
-  <h1 class="sr-only">{% if page.outline_title %}{{ page.outline_title }}{% else %}{{ page.title }}{% endif %}</h1>
+  <h1 class="visually-hidden">{% if page.outline_title %}{{ page.outline_title }}{% else %}{{ page.title }}{% endif %}</h1>
