--- a/_includes/latest-news-modal.html
+++ b/_includes/latest-news-modal.html
@@ -12,9 +12,7 @@
               <div class="modal-content">
                 <div class="modal-header">
                   <h4 id="title{{ forloop.index }}" class="modal-title typography__h4">{{ post.title }}</h4>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                   <div class="positioning__iframe-wrapper">
@@ -29,7 +27,7 @@
                   <!-- Facebook like share html -->
                   <div class="fb-like" data-href="{{ post.url }}" data-layout="button" data-action="like" data-size="large" data-show-faces="false" data-share="true"></div>
                   <a class="twitter-share-button" data-text="Newsroom - KCC | {{ post.title }} via @KCCedu" data-url="{{ site.url }}{{ post.url }}" data-size="large" href="https://twitter.com/intent/tweet">Tweet</a>
-                  <a data-iframetarget="#iframe{{ forloop.index }}" id="fullPageVideo{{ forloop.index }}" href="{{ post.url }}" class="btn buttons__btn-margin-top--sm btn-primary btn-sm ml-md-auto">View Full Page</a>&nbsp;<button type="button" class="btn buttons__btn-margin-top--sm btn-secondary btn-sm" data-dismiss="modal">Close</button>
+                  <a data-iframetarget="#iframe{{ forloop.index }}" id="fullPageVideo{{ forloop.index }}" href="{{ post.url }}" class="btn buttons__btn-margin-top--sm btn-primary btn-sm ms-md-auto">View Full Page</a>&nbsp;<button type="button" class="btn buttons__btn-margin-top--sm btn-secondary btn-sm" data-bs-dismiss="modal">Close</button>
                 </div>
               </div>
             </div>
@@ -41,9 +39,7 @@
               <div class="modal-content">
                 <div class="modal-header">
                   <h4 id="title{{ forloop.index }}" class="modal-title typography__h4">{{ post.title }}</h4>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                   <h5 class="news__sub-heading news__sub-heading--spacing"> <span class="news__date">Posted On: {{ post.date | date: "%m/%d/%y" }} </span></h5>
@@ -56,7 +52,7 @@
                   <!-- Face booklike share html -->
                   <div class="fb-like" data-href="{{ post.url }}" data-layout="button" data-action="like" data-size="large" data-show-faces="false" data-share="true"></div>
                   <a class="twitter-share-button" data-text="Newsroom - KCC | {{ post.title }} via @KCCedu" data-url="{{ site.url }}{{ post.url }}" data-size="large" href="https://twitter.com/intent/tweet">Tweet</a>
-                  <a href="{{ post.url }}" class="btn buttons__btn-margin-top--sm btn-primary btn-sm ml-md-auto">View Full Screen</a>&nbsp;<button type="button" class="btn buttons__btn-margin-top--sm btn-secondary btn-sm" data-dismiss="modal">Close</button>
+                  <a href="{{ post.url }}" class="btn buttons__btn-margin-top--sm btn-primary btn-sm ms-md-auto">View Full Screen</a>&nbsp;<button type="button" class="btn buttons__btn-margin-top--sm btn-secondary btn-sm" data-bs-dismiss="modal">Close</button>
                 </div>
               </div>
             </div>
