--- a/_includes/latest-news-widget.html
+++ b/_includes/latest-news-widget.html
@@ -67,9 +67,10 @@
         <!-- The Latest News List -->
         <!-- Latest News Widget's list of articles w/ circle icons (on right-side in desktop; on bottom in mobile) -->
         <section class="latest-news-widget__latest">
-          <h2 class="latest-news-widget__latest__h latest-news-widget__latest__h--no-underline typography__latest-news-widget__h2"><span class="latest-news-widget__red-underline">Latest News
-      <span id="todaysDate" class="latest-news-widget__latest__date"></span></span>
-      </h2>
+          <h2 class="latest-news-widget__latest__h latest-news-widget__latest__h--no-underline typography__latest-news-widget__h2">
+            <span class="latest-news-widget__red-underline">Latest News
+            <span id="todaysDate" class="latest-news-widget__latest__date">{{ "now" | date: "%-m.%-d" }}</span></span>
+          </h2>
           <ol id="jsTeaseList" class="latest-news-widget__latest__tease-group">
 
             {% for post in current_posts limit:4 %}
