--- a/_includes/document-head.html
+++ b/_includes/document-head.html
@@ -7,7 +7,7 @@
     {% if page.layout == 'post' or page.layout == 'archived-post' %}
     <title>{{ page.title }} - {{ page.date | date: "%-m/%-d/%Y" }} - KCC Newsroom</title>
     {% else %}
-    <title>{{page.title}} - {{site.title}}</title>
+    <title>{{page.title}} - KCC Newsroom</title>
     {% endif %}
     <meta name="description" content="{{page.description}}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
