Replace SASS `@import` rules with `@use`.

--- a/assets/scss/1-base/_typography.scss
+++ b/assets/scss/1-base/_typography.scss
@@ -1,3 +1,5 @@
+@use '../0-tools/vars' as *;
+
 .page-heading { // This class is applied to h1 level headings
   color: $sub-nav-heading;
   font-family: $secondaryfont-stack;
