--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,38 +1,37 @@
-// Variables
-@import '0-tools/vars';
-@import '0-tools/bootstrap-overrides';
+// Tools
+@use '0-tools/bootstrap-overrides';
 
 // Base items
-@import '1-base/typography';
-@import '1-base/links';
-@import '1-base/buttons';
-@import '1-base/background';
-@import '1-base/figures';
+@use '1-base/typography';
+@use '1-base/links';
+@use '1-base/buttons';
+@use '1-base/background';
+@use '1-base/figures';
 
 
 // Modular components
-@import '2-modules/header';
-@import '2-modules/latest-news-widget';
-@import '2-modules/events';
-@import '2-modules/fb-widget';
-@import '2-modules/featured-videos';
-@import '2-modules/timeline';
-@import '2-modules/playlist';
-@import '2-modules/archive';
-@import '2-modules/error';
-@import '2-modules/twitter';
-//@import '2-modules/infographic'; // SOURCE FOR MINIFIED INFOGRAPHIC CSS - DON'T DELETE TILL INFOGRAPHIC POST IS DEAD.
+@use '2-modules/header';
+@use '2-modules/latest-news-widget';
+@use '2-modules/events';
+@use '2-modules/fb-widget';
+@use '2-modules/featured-videos';
+@use '2-modules/timeline';
+@use '2-modules/playlist';
+@use '2-modules/archive';
+@use '2-modules/error';
+@use '2-modules/twitter';
+//@use '2-modules/infographic'; // SOURCE FOR MINIFIED INFOGRAPHIC CSS - DON'T DELETE TILL INFOGRAPHIC POST IS DEAD.
 
 // Layout items
-// @import "3-layout/...";
-@import '3-layout/positioning';
-@import '3-layout/post';
-@import '3-layout/infographic-post';
-@import '3-layout/content'; // Styles used in CloudCannon but must also be compiled to the main stylesheet
+// @use "3-layout/...";
+@use '3-layout/positioning';
+@use '3-layout/post';
+@use '3-layout/infographic-post';
+@use '3-layout/content'; // Styles used in CloudCannon but must also be compiled to the main stylesheet
 
 // Page specific styling
-// @import "4-pages/...";
-@import '4-pages/index/home';
+// @use "4-pages/...";
+@use '4-pages/index/home';
 
 // Internet Exploder fixes
-@import '0-tools/ie-only';
+@use '0-tools/ie-only';
